# mailcore-imapclient

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/mailcore_imapclient/: __init__.py  adapter.py
tests/: test_adapter.py  test_conformance.py  test_e2e_greenmail.py
