[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailcore-imapclient"
version = "0.1.0"
description = "IMAPClient adapter for mailcore - wraps synchronous IMAPClient with async executor pattern"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mail Reactor Contributors", email = "maintainers@mailreactor.dev"},
]
dependencies = [
    "mailcore>=1.0.0,<2.0.0",
    "imapclient>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit",
    "detect-secrets",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.hatch.build.targets.wheel]
packages = ["src/mailcore_imapclient"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
